# Personalised_AI_Interview

./: .gitignore  README.md  package-lock.json  package.json  render.yaml  vercel.json  vite.config.ts
server/: IntelligenceService.ts  index.ts  models.ts  package-lock.json  package.json
server-rust/: Cargo.toml
server-rust/src/: ai.rs  main.rs  models.rs
server/routes/: api.ts
src/: routeTree.gen.ts  styles.css
src/components/: AppLayout.tsx
src/db/: database.ts  schema.ts
src/lib/: ResumeContext.tsx  auth.tsx  mock-data.ts
src/routes/: __root.tsx  _authenticated.tsx  index.tsx  login.tsx  signup.tsx
src/routes/_authenticated/: ai-monitor.tsx  analytics.tsx  audit.tsx  dashboard.tsx  history.tsx  interview-room.tsx  interview-setup.tsx  jd-match.tsx  panel.tsx  recruiter.tsx  results.tsx  resume.tsx  roadmap.tsx  settings.tsx  skill-gap.tsx  voice-interview.tsx
src/server/: db-functions.ts  functions.ts
